Cambio de colores de interfaz y soporte para dólares

--- a/src/styl/base/config.styl
+++ b/src/styl/base/config.styl
@@ -170,15 +170,15 @@ $p-font-size     = $text-size.normal
  * Define los colores principales de la interfaz gráfica
  *
  */
-$base-color        = #35B4DB // Azul claro
+$base-color        = #0acf63 // Azul claro
 $base-color-light  = lighten($base-color, 30%)
 $base-color-dark   = darken($base-color, 30%)
 
-$base2-color       = #4C668C // Azul oscuro
+$base2-color       = #415770 // Azul oscuro
 $base2-color-light = lighten($base-color, 30%)
 $base2-color-dark  = darken($base-color, 30%)
 
-$base3-color       = #00FFF6 // Azul luminoso
+$base3-color       = #06ed6e // Azul luminoso
 $base3-color-light = lighten($base-color, 30%)
 $base3-color-dark  = darken($base-color, 30%)
 
