--- a/src/styl/objects/btn.styl
+++ b/src/styl/objects/btn.styl
@@ -46,7 +46,7 @@
 	color: #fff
 
 	&:hover
-		background: #33c2f7
+		background: $base-color
 
 /* ^Fin - .o-btn
 -----------------------------------------------------------------------------*/
