--- a/src/styl/objects/form.styl
+++ b/src/styl/objects/form.styl
@@ -34,8 +34,8 @@
 	placeholder(lighten($base2-color, 60%))
 
 	&:focus
-		border-color: #35c6f2
-		box-shadow: 0 0 6px 0 rgba(#35c6f2,.60)
+		border-color: $base-color
+		box-shadow: 0 0 6px 0 rgba($base-color,.50)
 
 
 
